--- a/source/physor2024_pres.bib
+++ b/source/physor2024_pres.bib
@@ -128,6 +128,12 @@
       url = {10.1016/j.anucene.2014.07.048}
 }
 
+@misc{openmc-plotter,
+  url = {https://github.com/openmc-dev/plotter},
+  title = {OpenMC Plotter},
+  publisher = {OpenMC}
+}
+
 @misc{openmc-chains,
   url={https://openmc.org/depletion-chains/},
   title={Depletion Chains},
