added labeled yz slice

--- a/source/physor2024_pres.tex
+++ b/source/physor2024_pres.tex
@@ -200,10 +200,10 @@
                 \item<2-> Griffin-BISON-SAM multiphysics models, including accident and load-following transients:  \cite{Stauff-applications-2022,Abdelhameed-ANS-2022, HF_MRs_ANL}
                 \item<2-> Balance of plant 1D thermal hydraulic simulation \cite{Duchnowski_plant_balance_2022}
             \end{itemize}
-            \item<3-> This work presents the first published OpenMC Model of the VTB GCMR
+            \item<3-> This work presents the first published OpenMC model of the VTB GCMR
             \begin{itemize}
                 \Large
-                \item<3->Plans to add this work's model to the VTB this summer
+                \item<3->Plans to add this model to the VTB this summer
             \end{itemize}
             \item<4-> For a full core model, it will be prohibitively expensive to model every TRISO explicitly
             \begin{itemize}
@@ -260,11 +260,12 @@
 \section{OpenMC Model}
 \begin{withoutheadline}
 \hypersetup{citecolor=white}
-\begin{frame}{OpenMC Infinite Assembly Model: Images via openmc-plotter \cite{openmc-plotter}}
+\begin{frame}{OpenMC Infinite Assembly Model: images via openmc-plotter \cite{openmc-plotter}}
     \begin{minipage}[t]{0.225\linewidth}
         \pause
         \begin{figure}
-            \includegraphics[height=0.8\textheight]{figures/yz_slice.png}
+            \hspace*{-1.15cm}
+            \includegraphics[height=0.8\textheight]{figures/yz_slice_label.png}
             \caption{YZ slice of reactor}
         \end{figure}
     \end{minipage}
@@ -437,7 +438,7 @@
                 \item Add me on LinkedIn (\href{https://www.linkedin.com/in/lewisgross1296}{lewisgross1296}) and GitHub (\href{https://github.com/lewisgross1296}{lewisgross1296})!
             \end{itemize}
         \end{minipage}
-        \hfill% 
+        \hfill%
         \begin{minipage}[t]{0.54\linewidth}
             \begin{figure}
                 \includegraphics[width=0.9\linewidth]{figures/gcmr_slice.png}
